dev-deployments/mongo-express/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: data
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "120m"
          ports:
            - containerPort: 8081
